Changes to controllers